objects/Quote.object
<CustomObject>
    <fields>
        <fullName>Grand_Total__c</fullName>
        <formula>CASE($RecordType.Name,&apos;RenMaint Quote&apos;,(Total_Extended_Price__c- Total_Discount__c),(Total_Extended_Price__c-One_Time_Adjustment__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grand Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Host_Id__c</fullName>
        <inlineHelpText>The value entered here will default on the VIP Quote Line Items added.</inlineHelpText>
        <label>Host Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICPack_discount__c</fullName>
        <label>IC Packaging Disc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IC_Packaging_TCV__c</fullName>
        <label>IC Packaging TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IC_discount__c</fullName>
        <label>Custom IC Layout Disc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IP_Access_Amount_Curr__c</fullName>
        <formula>Quote_Currency_Symbol2__c &amp; &apos; &apos; &amp; IF((IP_Access_Amount__c) &gt;= 1000000000, 
TEXT(FLOOR(round((IP_Access_Amount__c),0) / 1000000000)) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; IF((IP_Access_Amount__c) &gt;= 1000000, 
TEXT(FLOOR(round((IP_Access_Amount__c),0) / 1000000)) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
IF( 
(IP_Access_Amount__c) &gt;= 1000, 
RIGHT(TEXT(FLOOR(round((IP_Access_Amount__c),0) / 1000)), 3) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(round((IP_Access_Amount__c),0))), 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IP Access Amount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Access_Amount__c</fullName>
        <label>IP Access Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IP_Base_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>IP Base Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IP_Maint_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>IP Maintenance Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Include_1Yr_TBL_In_Report__c</fullName>
        <formula>IF(  $User.Include_TBL__c  , &apos;TRUE&apos;,&apos;FALSE&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Include 1Yr TBL in Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_Annual_Price__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the check box is checked then in the Renewal maintenance Reports, the &quot;Annual Unit List&quot; column is displayed.</description>
        <label>Include Annual Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Discount_In_Report__c</fullName>
        <formula>IF( $User.Include_Discount__c , &apos;TRUE&apos;,&apos;FALSE&apos;)</formula>
        <label>Include Discount In Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_Discount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is for VIP/IP quotes. If this is checked then in the Quote reports, the Discount field is displayed</description>
        <label>Include Discount %</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Extended_Price_in_Report__c</fullName>
        <formula>IF( $User.Include_Extended_Price_for_Quotes__c , &apos;TRUE&apos;,&apos;FALSE&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Include Extended Price in Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_WAN_Rate_in_Report__c</fullName>
        <formula>IF(  $User.Include_WAN_Rate__c  , &apos;TRUE&apos;,&apos;FALSE&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Include WAN Rate in Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_WAN_Type_in_Report__c</fullName>
        <formula>IF(  $User.Include_WAN_Type__c  , &apos;TRUE&apos;,&apos;FALSE&apos;)</formula>
        <label>Include WAN Type in Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_WAN_in_Report__c</fullName>
        <formula>IF(  $User.Include_WAN__c  , &apos;TRUE&apos;,&apos;FALSE&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Include WAN in Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interface_Failure_Reason__c</fullName>
        <description>Is populated with reason due to which Quote was not submitted</description>
        <label>Interface Failure Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_unnecessary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoice unnecessary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_My_Quote__c</fullName>
        <description>This field determines if the logged in user is the owner of the quote</description>
        <formula>IF(  $User.Id  =  Owner__c ,&apos;TRUE&apos; ,&apos;FALSE&apos;)</formula>
        <label>Is My Quote</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Japan_Terms__c</fullName>
        <label>Japan Terms</label>
        <picklist>
            <picklistValues>
                <fullName>検収月末締115日現金一括支払</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>検収月末締め6ヵ月後現金払い</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>検収月末締め翌々月５日現金払い</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>検収末日締め翌月末現金払い</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>請求月末締め翌月15日現金払い</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>請求月末締め翌月末現金払い</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LD_discount__c</fullName>
        <label>Logic Design Disc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_Legacy__c</fullName>
        <description>This field will contain the name of the person who last modified this quote record in siebel.</description>
        <label>Last Modified By Legacy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date_Legacy__c</fullName>
        <description>This field will contain the last modified date and time stamp when this record is last modified in Siebel.</description>
        <label>Last Modified Date Legacy</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Line_Items_Price_Book_Types__c</fullName>
        <label>Line Items Price Book Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>List_price_quote_ARM__c</fullName>
        <label>List price quote ARM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>List_price_quote_DIP__c</fullName>
        <label>List price quote DIP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>List_price_quote_DI__c</fullName>
        <label>List price quote DI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>List_price_quote_EA__c</fullName>
        <label>List price quote EA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>List_price_quote_FV__c</fullName>
        <label>List price quote FV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>List_price_quote_ICPack__c</fullName>
        <label>List price quote ICPack</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>List_price_quote_IC__c</fullName>
        <label>List price quote IC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>List_price_quote_LD__c</fullName>
        <label>List price quote LD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>List_price_quote_PCB__c</fullName>
        <label>List price quote PCB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>List_price_quote_PVA__c</fullName>
        <label>List price quote PVA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>List_price_quote_SL__c</fullName>
        <label>List price quote SL</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>List_price_quote_VIP__c</fullName>
        <label>List price quote VIP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Logic_Design_TCV__c</fullName>
        <label>Logic Design TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Maint_SO__c</fullName>
        <label>Maint SO#</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintenance_Total__c</fullName>
        <label>Maintenance Total</label>
        <summarizedField>QuoteLineItem.Extended_Price__c</summarizedField>
        <summaryFilterItems>
            <field>QuoteLineItem.Part_Number__c</field>
            <operation>contains</operation>
            <value>M1</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>QuoteLineItem.Include_in_Report__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Max_Line_Number__c</fullName>
        <label>Max Line Number</label>
        <summarizedField>QuoteLineItem.Line_Number__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Months_Covered__c</fullName>
        <label>Months Covered</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_price_quote_ARM__c</fullName>
        <label>Net price quote ARM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_price_quote_DIP__c</fullName>
        <label>Net price quote DIP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_price_quote_DI__c</fullName>
        <label>Net price quote DI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_price_quote_EA__c</fullName>
        <label>Net price quote EA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_price_quote_FV__c</fullName>
        <label>Net price quote FV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_price_quote_ICPack__c</fullName>
        <label>Net price quote ICPack</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_price_quote_IC__c</fullName>
        <label>Net price quote IC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_price_quote_LD__c</fullName>
        <label>Net price quote LD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_price_quote_PCB__c</fullName>
        <label>Net price quote PCB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_price_quote_PVA__c</fullName>
        <label>Net price quote PVA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_price_quote_SL__c</fullName>
        <label>Net price quote SL</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_price_quote_VIP__c</fullName>
        <label>Net price quote VIP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Assigned_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Assigned User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OM_Rep_Login__c</fullName>
        <formula>OM_Rep__r.Login__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OM Rep Login</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OM Rep</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>5_1 - Data Steward</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Quote_OM_Rep</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>One_Time_Adjustment_Curr__c</fullName>
        <formula>Quote_Currency_Symbol2__c &amp; &apos; &apos;&amp; IF(One_Time_Adjustment__c&lt;0,&quot;-&quot;,&quot;&quot;) &amp; IF(ABS(One_Time_Adjustment__c) &gt;= 1000000, 
TEXT(FLOOR(round(ABS(One_Time_Adjustment__c),0) / 1000000)) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
IF( 
ABS(One_Time_Adjustment__c) &gt;= 1000, 
RIGHT(TEXT(FLOOR(round(ABS(One_Time_Adjustment__c),0) / 1000)), 3) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(round(ABS(One_Time_Adjustment__c),0))), 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One Time Adjustment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>One_Time_Adjustment_Currency__c</fullName>
        <formula>ABS(One_Time_Adjustment__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One Time Adjustment Currency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>One_Time_Adjustment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>One Time Adjustment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <formula>Opportunity.Opportunity_Id__c</formula>
        <label>Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Transaction_Type__c</fullName>
        <formula>TEXT( Opportunity.Transaction_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Transaction Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_List_Price__c</fullName>
        <label>Other List Price</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Net_Price__c</fullName>
        <label>Other Net Price</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_Include_Annual_Price__c</fullName>
        <description>used in renewal maintenance report</description>
        <formula>IF( Owner__r.Include_Annual_Price__c == true,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <label>Owner Include Annual Price</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Include_List_Price_99yr__c</fullName>
        <formula>Owner__r.Include_List_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Include List Price_99yr</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Include_Renmaint_Discount__c</fullName>
        <formula>IF( Owner__r.Include_Renmaint_Discount__c == true,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Include Discount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Include_discount_99yr__c</fullName>
        <formula>Owner__r.Include_Discount_99Yr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Include discount 99yr</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PCB_Design_TCV__c</fullName>
        <label>PCB Design TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PCB_discount__c</fullName>
        <label>PCB Design Disc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PLMA2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PLMA #</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 OR 2) AND 3</booleanFilter>
            <filterItems>
                <field>Apttus__APTS_Agreement__c.Apttus__Account__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Parent_Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>5_1 - Data Steward</value>
            </filterItems>
            <filterItems>
                <field>Apttus__APTS_Agreement__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Legacy Agreement Numbers</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Quotes (PLMA #)</relationshipLabel>
        <relationshipName>Quotes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PLMA_Report__c</fullName>
        <formula>IF(ISBLANK( PLMA2__c), Entry_PLMA__c ,PLMA2__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PLMA #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLMA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PLMA #</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Agreement__c.Account__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Parent_Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>5_1 - Data Steward</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>Quotes (PLMA #)</relationshipLabel>
        <relationshipName>Quotes_PLMA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO_Date__c</fullName>
        <label>PO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PVA_discount__c</fullName>
        <label>Physical Verification &amp; Analysis Disc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PIA 0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PIA 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PIA 90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PIA 180</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Employee Phone</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Physical_Verification_Analysis_TCV__c</fullName>
        <label>Physical Verification &amp; Analysis TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Priced_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Priced By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Account_Address__c</fullName>
        <label>Primary Account Address</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Account_Name_for_Report__c</fullName>
        <formula>if( Primary_Account_Sold_To_Name__c == null, Contact_Account_Name__c , Primary_Account_Sold_To_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Account Name for Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Account_Number__c</fullName>
        <label>Primary Account Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Account_SAP_Sold_To__c</fullName>
        <description>Stores the Primary Account&apos;s sold to account&apos;s SAP Id.</description>
        <label>Primary Account SAP Sold To</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Account_Sold_To_Name__c</fullName>
        <description>Stores Primary Account&apos;s sold to name for Ren Maint</description>
        <label>Primary Account Sold To Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Quote_Discount__c</fullName>
        <label>Primary Quote Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Primary_SAP_Customer_Id__c</fullName>
        <label>Primary SAP Customer Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Sector_10_List_Price__c</fullName>
        <label>Physical Signoff List Price</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Sector_10_Net_Price__c</fullName>
        <label>Physical Signoff Net Price</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Sector_11_List_Price__c</fullName>
        <label>Synthesis &amp; Test List Price</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Sector_11_Net_Price__c</fullName>
        <label>Synthesis &amp; Test Net Price</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Sector_12_List_Price__c</fullName>
        <label>System-Level Design List Price</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Sector_12_Net_Price__c</fullName>
        <label>System-Level Design Net Price</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Total__c</fullName>
        <description>Total of extended Price, Product name not contain &apos;M1&apos;.</description>
        <label>Product Total</label>
        <summarizedField>QuoteLineItem.Extended_Price__c</summarizedField>
        <summaryFilterItems>
            <field>QuoteLineItem.Product_CPMID__c</field>
            <operation>notContain</operation>
            <value>M1</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>QuoteLineItem.Include_in_Report__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Quote_Comments__c</fullName>
        <label>Quote Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quote_Currency_Symbol2__c</fullName>
        <label>Quote Currency Symbol</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Currency__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Currency</label>
        <referenceTo>Currency_Exchange_Rate__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Number__c</fullName>
        <displayFormat>Q-{0000}</displayFormat>
        <externalId>true</externalId>
        <label>Quote ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Quote_Total_Without_Disc__c</fullName>
        <description>Sum of extended price no discount field on quote line items.</description>
        <label>Quote Total Without Disc</label>
        <summarizedField>QuoteLineItem.Extended_Price_Without_Disc__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Quote_Total_without_Disc_OTA_Format__c</fullName>
        <formula>Quote_Currency_Symbol2__c &amp; &apos; &apos; &amp; IF(Quote_Total_Without_Disc__c &gt;= 1000000, 
TEXT(FLOOR(round(Quote_Total_Without_Disc__c,0) / 1000000)) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
IF(Quote_Total_Without_Disc__c &gt;= 1000, 
RIGHT(TEXT(FLOOR(round(Quote_Total_Without_Disc__c,0) / 1000)), 3) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(round(Quote_Total_Without_Disc__c,0))), 3)</formula>
        <label>Quote Total without Disc/OTA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Type__c</fullName>
        <label>Quote Type</label>
        <picklist>
            <picklistValues>
                <fullName>Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ROW_ID__c</fullName>
        <description>To store the Row Id of Siebel</description>
        <externalId>true</externalId>
        <inlineHelpText>To store the Row Id of Siebel</inlineHelpText>
        <label>ROW ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remaining_Balance_IPAccessSel_Report__c</fullName>
        <formula>VALUE(RIGHT(SUBSTITUTE(Remaining_Balance_IPAccessSel__c ,&quot;,&quot;,&quot;&quot;),LEN(SUBSTITUTE(Remaining_Balance_IPAccessSel__c ,&quot;,&quot;,&quot;&quot;))-2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining_Balance_IPAccessSel__c</fullName>
        <label>Remaining Balance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remaining_Balance_IPAccess_Report__c</fullName>
        <formula>VALUE(RIGHT(SUBSTITUTE(Remaining_Balance_IPAccess__c ,&quot;,&quot;,&quot;&quot;),LEN(SUBSTITUTE(Remaining_Balance_IPAccess__c ,&quot;,&quot;,&quot;&quot;))-2))</formula>
        <label>Remaining Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining_Balance_IPAccess__c</fullName>
        <label>Remaining Balance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revision_Date__c</fullName>
        <description>Display last date when quote was updated</description>
        <label>Revision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revision__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Revision</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Royalty_Type__c</fullName>
        <description>Provides all the options related to Tensilica license royalty.</description>
        <inlineHelpText>Provides all the options related to Tensilica license royalty.</inlineHelpText>
        <label>Royalty Type</label>
        <picklist>
            <picklistValues>
                <fullName>Royalty Rate (%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core Fee (s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SAP_Id__c</fullName>
        <description>Primary SAP Customer id for search</description>
        <label>Primary SAP Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>